chore: fix data source links in message body not wrapped when link is too long

--- a/app/assets/stylesheets/components/chatroom.scss
+++ b/app/assets/stylesheets/components/chatroom.scss
@@ -43,7 +43,10 @@
   color: darkslategray;
   &.error {
     color: ivory;
- }
+  }
+  > a {
+    word-wrap: break-word;
+  }
  text-align: left;
 }
 .chat-footer {
